--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
 
       message.textContent = "";
       loader.style.display = "flex";
-
+      
+// 🔹 Masquer la page de login
+  document.getElementById("login").style.display = "none";
+      
       if (!cin) {
         loader.style.display = "none";
         message.textContent = "⚠️ Veuillez entrer un CIN !";
