--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   
     <!-- page de login -->
-     <div id="login">
+     <div class="container" id="login">
       <label id="cinlbl" for="cinInput">CIN :</label>
       <input type="text" id="cinInput" inputmode="numeric" pattern="[0-9]*" placeholder="Entrer CIN">
       <button onclick="chercherEtudiant()">Chercher</button>
