--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   
     <!-- page de login -->
      <div id="login">
-      <label id="cinlbl" for="cinInput">CIN :</label>
-      <input type="text" id="cinInput" inputmode="numeric" pattern="[0-9]*" placeholder="Entrer CIN">
-      <button onclick="chercherEtudiant()">Chercher</button>
+        <div class="cadre">
+          <label id="cinlbl" for="cinInput">CIN :</label>
+          <input type="text" id="cinInput" inputmode="numeric" pattern="[0-9]*" placeholder="Entrer CIN">
+          <button onclick="chercherEtudiant()">Chercher</button>
+        <div id="login">
     </div>
     
 
