--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <label id="cinlbl" for="cinInput">CIN :</label>
           <input type="text" id="cinInput" inputmode="numeric" pattern="[0-9]*" placeholder="Entrer CIN">
           <button onclick="chercherEtudiant()">Chercher</button>
-        <div id="login">
+        <div>
     </div>
     
 
