--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
     <!-- page de login -->
      <div id="login">
         <div class="cadre">
-          <label id="cinlbl" for="cinInput">CIN :</label>
+          <img src="logocnfcpp.png" alt="logocnfcpp" width="200">
+          <img id="loader" src="loader.gif" alt="Chargement..." width="200">
           <input type="text" id="cinInput" inputmode="numeric" pattern="[0-9]*" placeholder="Entrer CIN">
           <button onclick="chercherEtudiant()">Chercher</button>
         </div>
     </div>
     
 
-    <!-- Loader -->
+    <!-- Loader 
     <div id="loader">
       <img src="loader.gif" alt="Chargement..." width="200">
-    </div>
+    </div> -->
 
     <!-- CIN introuvable -->
     <div id="cinfail">
