--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       loader.style.display = "flex";
       
 // 🔹 Masquer la page de login
-  document.getElementById("login").style.display = "none";
+//  document.getElementById("login").style.display = "none";
       
       if (!cin) {
         loader.style.display = "none";
