--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       logo.style.display = "none";
       
 // 🔹 Masquer la page de login
-//  document.getElementById("login").style.display = "none";
+  document.getElementById("login").style.display = "none";
       
       if (!cin) {
         loader.style.display = "none";
