--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@ async function chercherEtudiant() {
       recuURL = null;
     } else {
       // Étudiant trouvé
+      // 🔹 Masquer la page de login
+      document.getElementById("login").style.display = "none";
       currentRow = data.row;
       document.getElementById("nom").value = data.Nom || "";
       document.getElementById("tel1").value = data.Tel1 || "";
