--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <div id="login">
         <div class="cadre">
           <img id="logo" src="logocnfcpp.png" alt="logocnfcpp" width="200">
-          <img id="loader" src="loader.gif" alt="Chargement..." width="200">
+          <img id="loader" src="load.gif" alt="Chargement..." width="200">
           <input type="text" id="cinInput" inputmode="numeric" pattern="[0-9]*" placeholder="Entrer CIN">
           <button onclick="chercherEtudiant()">Chercher</button>
         </div>
