--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ async function chercherEtudiant() {
   loader.style.display = "flex";
   logo.style.display = "none";
   // 🔹 Masquer la page de login
-  document.getElementById("login").style.display = "none";
+ // document.getElementById("login").style.display = "none";
   if (!cin) {
     loader.style.display = "none";
     logo.style.display = "flex";
