--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ async function chercherEtudiant() {
     const data = await response.json();
     if (Object.keys(data).length === 0) {
       // Pas trouvé
+      document.getElementById("fail").style.display = "flex";
       document.getElementById("cinfail").style.display = "flex";
       toggleFields(true);
       recuURL = null;
