--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     <button onclick="soumettre()">Soumettre</button>
     <button id="btnrecu" onclick="getrecu()">Reçu d'inscription</button>
 
-    <div id="message" class="message"></div>
+    
   </div>
-
+<div id="notifications"></div>
   <script>
     const apiURL = "https://script.google.com/macros/s/AKfycbx8aH6rH6rBM68_JjSn-YxVjNcPOXHj_VuDg8QiXeskyaNhu91n_YmmIu2asKVc9fCi/exec";
     let currentRow = null;
