--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 // Chercher étudiant
 async function chercherEtudiant() {
   const cin = document.getElementById("cinInput").value.trim();
-  const message = document.getElementById("message");
-  message.textContent = "";
+  //const message = document.getElementById("message");
+  //message.textContent = "";
   loader.style.display = "flex";
   logo.style.display = "none";
   // 🔹 Masquer la page de login
