--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div id="cinfail">
             <input type="text" id="nomsignal" placeholder="Saisir votre nom">
             <div id="btnfail">
-              <button onclick="signaler()">Signaler erreur</button>
+              <button onclick="signaler()">Signaler</button>
               <button id="cinfailcncl">Retour</button>
             </div>
           </div>
