--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
           <div id="logform">
             <input type="text" id="cinInput" inputmode="numeric" pattern="[0-9]*" placeholder="Entrer CIN">
             <button onclick="chercherEtudiant()">Chercher</button>
-          </div>
+          </div><!-- fin logform -->
           <div id="cinfail">
             <input type="text" id="nomsignal" placeholder="Saisir votre nom">
             <div id="btnfail">
               <button onclick="signaler()">Signaler</button>
               <button id="cinfailcncl">Retour</button>
-            </div>
-          </div>
-        </div>
-    </div>
+            </div><!-- fin btnfail -->
+          </div><!-- fin cinfail -->
+        </div><!-- fin cadre -->
+    </div><!-- fin login -->
    <div class="container">
      <h2>Mise à jour de vos informations</h2>
     <!-- Coordonnées -->
