--- a/index.html
+++ b/index.html
@@ -27,18 +27,20 @@
           </div><!-- fin cinfail -->
         </div><!-- fin cadre -->
     </div><!-- fin login -->
-   <div class="container">
-     <h2>Mise à jour de vos informations</h2>
-    <!-- Coordonnées -->
-    <div class="field"><label>Nom :</label><input type="text" id="nom"></div>
-    <div class="field"><label>Téléphone 1 :</label><input type="text" id="tel1"></div>
-    <div class="field"><label>Téléphone 2 :</label><input type="text" id="tel2"></div>
-    <div class="field"><label>Email <span style="color:red">*</span> :</label><input type="email" id="email" required></div>
-    <div class="field"><label></label><input type="text" id="modifie" readonly></div>
-
-    <!-- Boutons -->
-    <button onclick="soumettre()">Soumettre</button>
-    <button id="btnrecu" onclick="getrecu()">Reçu d'inscription</button>
+  <div class="container">
+    <div class="infos">
+      <h2>Mise à jour de vos informations</h2>
+      <div class="field"><label>Nom :</label><input type="text" id="nom"></div>
+      <div class="field"><label>Téléphone 1 :</label><input type="text" id="tel1"></div>
+      <div class="field"><label>Téléphone 2 :</label><input type="text" id="tel2"></div>
+      <div class="field"><label>Email <span style="color:red">*</span> :</label><input type="email" id="email" required></div>
+      <div class="field"><label></label><input type="text" id="modifie" readonly></div>
+      <button onclick="soumettre()">Soumettre</button>
+      <button id="btnrecu" onclick="getrecu()">Reçu d'inscription</button>
+    </div>
+    <div class="services">
+      
+    </div>
   </div>
   <div id="notifications"></div>
   <script>
