--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div><!-- fin cadre -->
     </div><!-- fin login -->
   <div class="container">
-    <div class="infos">
+    <div id="infos">
       <h2>Mise à jour de vos informations</h2>
       <div class="field"><label>Nom :</label><input type="text" id="nom"></div>
       <div class="field"><label>Téléphone 1 :</label><input type="text" id="tel1"></div>
@@ -36,10 +36,10 @@
       <div class="field"><label>Email <span style="color:red">*</span> :</label><input type="email" id="email" required></div>
       <div class="field"><label></label><input type="text" id="modifie" readonly></div>
       <button onclick="soumettre()">Soumettre</button>
-      <button id="btnrecu" onclick="getrecu()">Reçu d'inscription</button>
     </div>
-    <div class="services">
-      
+    <div id="services">
+      <h2>Récupérer vos reçus de versement des frais</h2>
+      <button id="btnrecu" onclick="getrecu()">Reçu d'inscription</button>
     </div>
   </div>
   <div id="notifications"></div>
