--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <img id="loader" src="load.gif" alt="Chargement..." width="160">
           <img id="fail" src="cinfail.png" alt="CIN introuvable ou erroné !" width="160">
           <div id="logform">
-            <input type="text" id="cinInput" inputmode="numeric" pattern="[0-9]*" placeholder="Entrer CIN">
+            <input type="tel" id="cinInput" inputmode="numeric" pattern="[0-9]*" placeholder="Entrer CIN">
             <button onclick="chercherEtudiant()">Chercher</button>
           </div><!-- fin logform -->
           <div id="cinfail">
