--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       if (result.status === "success") {
         document.getElementById("modifie").value = result.modifie || new Date().toLocaleString();
         showMessage("✅ Modification enregistrée !", "success");
-        setTimeout(() => location.reload(), 2000);
+        setTimeout(() => window.location.reload(true), 2000);
       } else {
         showMessage("❌ Erreur lors de la mise à jour !", "error");
       }
