--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
         recuURL = data.Recu || null;
 
         const nom = document.getElementById("nom").value.trim();
+        const mots = nomComplet.split(/\s+/); // découpe par espaces multiples
+            let nomAffiche;
+            if (mots.length === 1) {
+              nomAffiche = mots[0];
+            } else if (mots.length === 2) {
+              nomAffiche = mots[0];
+            } else {
+              nomAffiche = mots.slice(0, 2).join(" ");
+            }
         showMessage(`👋 Bonjour ${nom}`, "success");
         //showMessage("✅ CIN trouvée.", "success");
 
