--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       loader.style.display = "none";
       logo.style.display = "flex";
       document.getElementById("login").style.display = "flex";
-      showMessage("⚠️ Veuillez entrer le niméro de CIN !", "error");
+      showMessage("⚠️ Veuillez entrer le numéro de votre CIN !", "error");
       return;
     }
 
