--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- page de login -->
      <div id="login">
         <div class="cadre">
-          <img id="logo" src="logocnfcpp.png" alt="logocnfcpp" width="160">
-          <img id="loader" src="load.gif" alt="Chargement..." width="160">
-          <img id="fail" src="cinfail.png" alt="CIN introuvable ou erroné !" width="160">
+          <img id="logo" src="logocnfcpp.png" alt="logocnfcpp">
+          <img id="loader" src="load.gif" alt="Chargement...">
+          <img id="fail" src="cinfail.png" alt="CIN introuvable ou erroné !">
           <div id="logform">
             <input type="tel" id="cinInput" inputmode="numeric" pattern="[0-9]*" placeholder="Entrer CIN">
             <button onclick="chercherEtudiant()">Chercher</button>
