--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     </div>
   </div>
   <div id="notifications"></div>
+  <div class="filigrane">LTI Pr2</div>
   <script>
   const apiURL = "https://script.google.com/macros/s/AKfycbx8aH6rH6rBM68_JjSn-YxVjNcPOXHj_VuDg8QiXeskyaNhu91n_YmmIu2asKVc9fCi/exec";
   let currentRow = null;
