--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <link href="logocnfcpp.png" rel="icon" type="image/x-icon"/>
-  <title>MAJ Coordonnées</title>
+  <title>LTI Pr2</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  
+  <header>
+    <div class="titre">
+      <p>LTI Pr2</p>
+      <p>Deuxième année</p>
+    </div>
+    <div class="userbox">
+      <span id="username">Nom Étudiant</span>
+      <button id="logoutBtn" onclick="location.reload()">Déconnexion</button>
+    </div>
+  </header>
     <!-- page de login -->
      <div id="login">
         <div class="cadre">
