--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <header>
     <div class="titre">
-      <p>LTI Pr2</p>
-      <p>Deuxième année</p>
+      <h2>LTI Pr2</h2>
+      <h3>Deuxième année</h3>
     </div>
     <div class="userbox">
       <span id="username">Nom Étudiant</span>
