--- a/index.html
+++ b/index.html
@@ -38,13 +38,18 @@
     </div><!-- fin login -->
   <div class="container">
     <div id="infos">
-      <h3>Mise à jour de vos informations</h3>
-      <div class="field"><label>Nom :</label><input type="text" id="nom"></div>
-      <div class="field"><label>Téléphone 1 :</label><input type="text" id="tel1"></div>
-      <div class="field"><label>Téléphone 2 :</label><input type="text" id="tel2"></div>
-      <div class="field"><label>Email <span style="color:red">*</span> :</label><input type="email" id="email" required></div>
-      <div class="field"><label></label><input type="text" id="modifie" readonly></div>
-      <button onclick="soumettre()">Soumettre</button>
+      <div id="topinfo">
+        <h3>Mise à jour de vos informations</h3>
+        <button onclick="soumettre()">Soumettre</button>
+      </div>
+      <div id="basinfo">
+        <label>CIN :</label><input id="infocin" readonly>
+        <label>Nom :</label><input type="text" id="nom">
+        <label>Téléphone 1<span style="color:red">*</span> :</label><input type="text" id="tel1">
+        <label>Téléphone 2 :</label><input type="text" id="tel2">
+        <label>Email<span style="color:red">*</span> :</label><input type="email" id="email" required>
+        <label></label><input id="modifie" readonly>
+       </div>
     </div>
     <div id="services">
       <h3>Récupérer vos reçus de versement des frais</h3>
@@ -188,10 +193,10 @@
 
   // 🔹 Soumettre mise à jour
   async function soumettre() {
-    if (!currentRow) {
+   /* if (!currentRow) {
       showMessage("⚠️ Veuillez d'abord saisir votre CIN !", "error");
       return;
-    }
+    }*/
 
     const email = document.getElementById("email").value.trim();
     if (!email) {
