--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div id="topinfo">
         <h3>Mise à jour de vos informations</h3>
         <button onclick="soumettre()">Soumettre</button>
-      </div>
+      </div><!-- fin topinfo -->
       <div id="basinfo">
         <div class="labels">
           <label>CIN :</label>
@@ -50,7 +50,7 @@
           <label>Téléphone 2 :</label>
           <label>Email<span style="color:red">*</span> :</label>
           <label>Modifié le :</label>
-        </div>
+        </div><!-- fin labels -->
         <div class="inputs">
           <input id="infocin" readonly>
           <input type="text" id="nom">
@@ -58,13 +58,14 @@
           <input type="text" id="tel2">
           <input type="email" id="email" required>
           <label></label><input id="modifie" readonly>
-       </div>
-    </div>
+       </div><!-- fin inputs -->
+      </div><!-- fin basinfo -->
+    </div><!-- fin infos -->
     <div id="services">
       <h3>Récupérer vos reçus de versement des frais</h3>
       <button id="btnrecu" onclick="getrecu()">Reçu d'inscription</button>
-    </div>
-  </div>
+    </div><!-- fin services -->
+  </div><!-- fin container -->
   <div id="notifications"></div>
   <div class="filigrane">LTI Pr2</div>
   <script>
