--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href="logocnfcpp.png" rel="icon" type="image/x-icon"/>
   <title>LTI Pr2</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
 <body>
   <header>
@@ -13,8 +14,8 @@
       <h3>Deuxième année</h3>
     </div>
     <div class="userbox">
-      <span id="username">Nom Étudiant</span>
-      <button id="logoutBtn" onclick="location.reload()">Déconnexion</button>
+      <button class="logoutBtn" id="logoutBtnpc" onclick="location.reload()">Déconnexion</button>
+      <button class="logoutBtn" id="logoutBtnmob" onclick="location.reload()"><i class="bi bi-box-arrow-right"></i></button>
     </div>
   </header>
     <!-- page de login -->
