--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="container">
     <div id="infos">
       <div id="topinfo">
-        <h3>Mise à jour de vos informations</h3>
+        <h3>Editer vos informations</h3>
         <button onclick="soumettre()">Soumettre</button>
       </div><!-- fin topinfo -->
       <div id="basinfo">
