--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <input type="text" id="tel1">
           <input type="text" id="tel2">
           <input type="email" id="email" required>
-          <label></label><input id="modifie" readonly>
+          <input id="modifie" readonly>
        </div><!-- fin inputs -->
       </div><!-- fin basinfo -->
     </div><!-- fin infos -->
@@ -126,7 +126,7 @@
       loader.style.display = "none";
       logo.style.display = "flex";
       document.getElementById("login").style.display = "flex";
-      showMessage("⚠️ Veuillez entrer le numéro de votre CIN !", "error");
+      showMessage("<i class="bi bi-exclamation-triangle"></i> Veuillez entrer le numéro de votre CIN !", "error");
       return;
     }
 
@@ -141,7 +141,7 @@
         document.getElementById("cinfail").style.display = "flex";
         toggleFields(true);
         recuURL = null;
-        showMessage("❌ Numéro de CIN introuvable ou erroné.", "error");
+        showMessage("<i class="bi bi-x-square"></i> Numéro de CIN introuvable ou erroné.", "error");
       } else {
         // Étudiant trouvé
         document.getElementById("login").style.display = "none";
@@ -166,8 +166,7 @@
             } else {
               nomAffiche = mots.slice(0, 2).join(" ");
             }
-        showMessage(`👋 Bonjour ${nomAffiche}`, "success");
-        //showMessage("✅ CIN trouvée.", "success");
+        showMessage(`<i class="bi bi-emoji-laughing"></i> Bonjour ${nomAffiche}`, "success");
 
         const hasEmail = !!data.Email;
         toggleFields(false, hasEmail);
@@ -179,7 +178,7 @@
       }
     } catch (error) {
       console.error(error);
-      showMessage("❌ Erreur de connexion au serveur.", "error");
+      showMessage("<i class="bi bi-database-x"></i> Erreur de connexion au serveur.", "error");
       toggleFields(true);
     } finally {
       loader.style.display = "none";
@@ -201,7 +200,7 @@
     link.click();
     document.body.removeChild(link);
 
-    showMessage("📄 Reçu téléchargé.", "info");
+    showMessage("<i class="bi bi-file-earmark-arrow-down"></i> Reçu téléchargé.", "info");
   }
 
   // 🔹 Soumettre mise à jour
@@ -213,7 +212,7 @@
 
     const email = document.getElementById("email").value.trim();
     if (!email) {
-      showMessage("⚠️ L'email est obligatoire !", "error");
+      showMessage("<i class="bi bi-exclamation-triangle"></i> L'email est obligatoire !", "error");
       return;
     }
 
@@ -230,14 +229,14 @@
 
       if (result.status === "success") {
         document.getElementById("modifie").value = result.modifie || new Date().toLocaleString();
-        showMessage("✅ Modification enregistrée !", "success");
+        showMessage("<i class="bi bi-floppy"></i> Modification enregistrée !", "success");
         setTimeout(() => window.location.reload(true), 2000);
       } else {
-        showMessage("❌ Erreur lors de la mise à jour !", "error");
+        showMessage("<i class="bi bi-x-square"></i> Erreur lors de la mise à jour !", "error");
       }
     } catch (error) {
       console.error(error);
-      showMessage("❌ Erreur de connexion au serveur.", "error");
+      showMessage("<i class="bi bi-database-x"></i> Erreur de connexion au serveur.", "error");
     }
   }
 
@@ -245,7 +244,7 @@
   async function signaler() {
     const nomsignal = document.getElementById("nomsignal").value.trim();
     if (!nomsignal) {
-      showMessage("⚠️ Veuillez saisir votre nom afin de signaler une erreur.", "error");
+      showMessage("<i class="bi bi-exclamation-triangle"></i> Veuillez saisir votre nom afin de signaler une erreur.", "error");
       return;
     }
 
@@ -259,13 +258,13 @@
 
       if (result.status === "success") {
         document.getElementById("nomsignal").value = "";
-        showMessage("✅ Signalement enregistré, merci !", "success");
+        showMessage("<i class="bi bi-floppy"></i> Signalement enregistré, merci !", "success");
       } else {
-        showMessage("❌ Erreur lors de l'envoi du signalement.", "error");
+        showMessage("<i class="bi bi-x-square"></i> Erreur lors de l'envoi du signalement.", "error");
       }
     } catch (error) {
       console.error(error);
-      showMessage("❌ Erreur de connexion au serveur.", "error");
+      showMessage("<i class="bi bi-database-x"></i> Erreur de connexion au serveur.", "error");
     }
   }
     // 🔹 Déclencher la recherche aussi avec la touche Entrée
