--- a/index.html
+++ b/index.html
@@ -274,6 +274,10 @@
         chercherEtudiant(); // exécute la même fonction que le bouton
       }
     });
+    // 🔄 Recharger la page après 50 secondes
+    setTimeout(() => {
+      window.location.reload(true);
+    }, 50000);
 </script>
 </body>
 </html>
