--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div><!-- fin topinfo -->
       <div id="basinfo">
         <div class="labels">
-          <label>CIN :</label>
+          <label> :</label>
           <label>Nom :</label>
           <label>Téléphone 1<span style="color:red">*</span> :</label>
           <label>Téléphone 2 :</label>
@@ -52,7 +52,7 @@
           <label>Modifié le :</label>
         </div><!-- fin labels -->
         <div class="inputs">
-          <input id="infocin" readonly>
+          <input id="info" readonly>
           <input type="text" id="nom">
           <input type="text" id="tel1">
           <input type="text" id="tel2">
@@ -127,6 +127,7 @@
       document.getElementById("login").style.display = "flex";
       showMessage("⚠️ Veuillez entrer le numéro de votre CIN !", "error");
       return;
+       input.focus();
     }
 
     try {
